--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "type": "module",
     "scripts": {
         "start": "gulp",
-        "build": "gulp zip"
+        "zip": "gulp zip",
+        "predeploy": "gulp build",
+        "deploy": "gh-pages -d build"
     },
     "repository": {
         "type": "git"
@@ -15,6 +17,7 @@
     "license": "ISC",
     "devDependencies": {
         "browser-sync": "^3.0.2",
+        "gh-pages": "^6.3.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^9.0.0",
         "gulp-concat": "^2.6.1",
